# py-laundry

./: .gitignore  CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE.md  README.md  pyproject.toml
.github/workflows/: release.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/source/: modules.rst  pylaundry.rst
py-laundry/: categorize.py  fill_missing.py  py-laundry.py  select_features.py  transform_columns.py
pylaundry/: categorize.py  fill_missing.py  pylaundry.py  select_features.py  transform_columns.py
tests/: test_categorize.py  test_fill_missing.py  test_integration.py  test_py-laundry.py  test_pylaundry.py  test_select_features.py  test_transform_columns.py
tests/data/: weather_test.csv
