[tool.poetry]
name = "py-laundry"
version = "0.1.0"
description = "Python package for basic preprocessing of dataframes used in machine learning and statistical analysis."
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0"
sklearn = "^0.0.0"

[tool.poetry.dev-dependencies]
pytest-cov = "^2.8"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
